# lab

./: .gitignore  .typos.toml  AGENTS.md  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CODE_STYLE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  NOTICE.md  README.md  RELEASES.md  TESTING.md  clippy.toml  implementation-notes.html  implementation-notes.md  pid_canvas_demo.rrd  pixi.toml  pyproject.toml
.github/workflows/: contrib_checks.yml  contrib_rerun_py.yml  reusable_build_and_upload_rerun_cli.yml
crates/simplant/sp_acquisition/: Cargo.toml  README.md
crates/simplant/sp_acquisition/src/: api.rs  lib.rs
crates/simplant/sp_acquisition/src/application/: mod.rs  ports.rs  run_session.rs
crates/simplant/sp_acquisition/src/domain/: binding.rs  error.rs  events.rs  mod.rs  sampling.rs  session.rs
crates/simplant/sp_acquisition/src/infrastructure/: config.rs
crates/simplant/sp_acquisition_modbus/: Cargo.toml  README.md
crates/simplant/sp_acquisition_modbus/src/: address.rs  lib.rs  tcp_source.rs
crates/simplant/sp_acquisition_replay/: Cargo.toml  README.md
crates/simplant/sp_acquisition_replay/src/: csv_source.rs  lib.rs
crates/simplant/sp_asset_model/: Cargo.toml  README.md
crates/simplant/sp_asset_model/src/: api.rs  lib.rs
crates/simplant/sp_asset_model/src/application/: mod.rs  ports.rs
crates/simplant/sp_asset_model/src/domain/: catalog.rs  equipment.rs  error.rs  events.rs  facility.rs  ids.rs  mod.rs  tag.rs
crates/simplant/sp_asset_model/src/infrastructure/: mod.rs  toml_catalog.rs
crates/simplant/sp_dataframe_query/: Cargo.toml  README.md
crates/simplant/sp_dataframe_query/src/: lib.rs
crates/simplant/sp_kernel/: Cargo.toml  README.md
crates/simplant/sp_kernel/src/: alarm_limits.rs  error.rs  lib.rs  measurement.rs  quality.rs  range.rs  tag_id.rs  time_window.rs  unit.rs
crates/simplant/sp_ml_dataloop/: Cargo.toml  README.md
crates/simplant/sp_ml_dataloop/src/: api.rs  lib.rs
crates/simplant/sp_ml_dataloop/src/application/: export.rs  mod.rs  ports.rs
crates/simplant/sp_ml_dataloop/src/domain/: dataset_spec.rs  error.rs  events.rs  feature.rs  manifest.rs  mod.rs  split.rs
crates/simplant/sp_ml_dataloop/src/infrastructure/: csv_sink.rs  mod.rs  parquet_sink.rs  toml_spec.rs
crates/simplant/sp_pid_viewer/: Cargo.toml  README.md
crates/simplant/sp_pid_viewer/src/: lib.rs  mapping.rs  symbols.rs  visualizer.rs
crates/simplant/sp_pid_viewer/src/view/: mod.rs  pipe_visualizer_system.rs  visualizer_system.rs
crates/simplant/sp_python/: Cargo.toml
crates/simplant/sp_python/src/: acquisition.rs  asset_model.rs  error.rs  kernel.rs  lib.rs  ml_dataloop.rs  pid.rs  recording.rs  simulation.rs  stress_testing.rs  types.rs
crates/simplant/sp_recording/: Cargo.toml  README.md
crates/simplant/sp_recording/src/: entity_path.rs  lib.rs  recorder.rs
crates/simplant/sp_sim_engine/: Cargo.toml  README.md
crates/simplant/sp_sim_engine/src/: first_order.rs  lib.rs  unit_ops.rs
crates/simplant/sp_simulation/: Cargo.toml  README.md
crates/simplant/sp_simulation/src/: api.rs  lib.rs
crates/simplant/sp_simulation/src/application/: mod.rs  ports.rs
crates/simplant/sp_simulation/src/domain/: component.rs  error.rs  events.rs  flowsheet.rs  ids.rs  mod.rs  run.rs  scenario.rs  stream.rs  unit_op.rs
crates/simplant/sp_simulation/src/infrastructure/: mod.rs  toml_flowsheet.rs
crates/simplant/sp_stress_testing/: Cargo.toml  README.md
crates/simplant/sp_stress_testing/src/: api.rs  lib.rs
crates/simplant/sp_stress_testing/src/domain/: criteria.rs  error.rs  events.rs  load_profile.rs  mod.rs  stress_test.rs
crates/simplant/sp_types/: Cargo.toml  README.md
crates/simplant/sp_types/src/: api.rs  lib.rs  namespace.rs  pid_pipe.rs  pid_symbol.rs  process_variable.rs  quality.rs  tag_metadata.rs
crates/store/re_importer/: Cargo.toml
crates/top/simplant-lab/: Cargo.toml  README.md  build.rs
crates/top/simplant-lab-cli/: Cargo.toml  README.md  build.rs
docs/proyect/: GUIDELINES.md  IMPLEMENTATION_STATUS.md  MIGRATION_PLAN.md  UPSTREAM_DIFF.md  prompt.md
docs/proyect/ADR/: 0001-fork-rerun-as-platform.md  0002-hexagonal-domain-architecture.md  0003-anticorruption-layer-sp-types.md  0004-rebranding-and-upstream-isolation.md  0005-license-isolation-dwsim-gpl.md  0006-industrial-acquisition-adapters.md  0007-native-first-order-sim-engine.md  README.md
docs/proyect/realtime-simulation/: 00-overview.md  01-streaming-en-vivo.md  02-panel-de-control.md  03-interactividad.md
docs/snippets/: Cargo.toml
examples/notebook/notebook/: cube.ipynb  partial_updates.ipynb  send_table.ipynb  set_application_blueprint.ipynb
examples/notebook/notebook_callbacks/: notebook_callbacks.ipynb
examples/notebook/notebook_neural_field_2d/: neural_field_2d.ipynb
examples/notebook/notebook_viewer/: notebook_viewer.ipynb
examples/python/: README.md
examples/python/air_traffic_data/: README.md  air_traffic_data.py  pyproject.toml
examples/python/any_scalar/: README.md  (+1 more)
examples/rust/state_timeline_example/: Cargo.toml
examples/rust/state_timeline_example/src/: main.rs
examples/simplant/dataset_export_demo/: Cargo.toml  README.md
examples/simplant/dataset_export_demo/src/: main.rs
examples/simplant/sim_demo/: --output  Cargo.toml  README.md
examples/simplant/sim_demo/src/: main.rs
rerun_js/web-viewer/: package.json
rerun_js/web-viewer-react/: package.json
rerun_py/: ARCHITECTURE.md  Cargo.toml  README.md  build.rs  mkdocs.yml  pyproject.toml
rerun_py/docs/: gen_common_index.py
rerun_py/rerun_bindings/: rerun_bindings.pyi
rerun_py/rerun_dev_fixup/: pyproject.toml
rerun_py/src/: python_bridge.rs  query_metrics.rs  tracing_session.rs  urdf.rs
rerun_py/tests/: test_pid_viewer.py  test_simplant_domain.py
run_wasm/: README.md
scripts/: snapshots.py
scripts/clippy_wasm/: clippy.toml
tests/rust/log_benchmark/: Cargo.toml
tests/rust/log_benchmark/src/: boxes3d_batch.rs  image.rs  main.rs  points3d_large_batch.rs  points3d_many_individual.rs  points3d_shared.rs  scalars.rs  transform3d.rs  very_large_chunk.rs
(+1329 files in other folders)
