[package]
name = "sp_asset_model"
authors.workspace = true
description = "SimPlant Lab asset model: plant hierarchy and process tags as DDD aggregates (Facility, Equipment, Tag)."
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
sp_kernel = { path = "../sp_kernel" }
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true, features = ["parse", "display", "serde"] }

[dev-dependencies]
