[package]
name = "sp_dataframe_query"
authors.workspace = true
description = "SimPlant Lab dataframe query adapter: implements DataframeQueryPort over re_dataframe."
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
sp_kernel = { path = "../sp_kernel" }
sp_ml_dataloop = { path = "../sp_ml_dataloop" }
sp_recording = { path = "../sp_recording" }
sp_types = { path = "../sp_types" }
re_dataframe.workspace = true
re_chunk_store.workspace = true
arrow.workspace = true
jiff.workspace = true

[dev-dependencies]
sp_recording = { path = "../sp_recording" }
sp_acquisition = { path = "../sp_acquisition" }
jiff.workspace = true
