[package]
name = "sp_pid_viewer"
authors.workspace = true
description = "SimPlant Lab P&ID viewer: embedded engineering symbols + interactive egui canvas."
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
publish = false
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
sp_asset_model = { path = "../sp_asset_model" }
sp_types = { path = "../sp_types" }

re_chunk_store.workspace = true
re_log_types.workspace = true
re_sdk_types.workspace = true
re_ui.workspace = true
re_view.workspace = true
re_viewer_context.workspace = true

egui.workspace = true

[lints]
workspace = true
