[package]
name = "sp_pid_viewer"
authors.workspace = true
description = "SimPlant Lab P&ID viewer: embedded engineering symbols + interactive egui canvas."
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
publish = false
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["view"]
# The native viewer view class (PidView) and the egui canvas.
view = [
  "dep:re_chunk_store",
  "dep:re_log_types",
  "dep:re_sdk_types",
  "dep:re_ui",
  "dep:re_viewer_context",
  "dep:egui",
  "dep:sp_types",
]

[dependencies]
sp_asset_model = { path = "../sp_asset_model" }
sp_types = { path = "../sp_types", optional = true }

re_chunk_store = { workspace = true, optional = true }
re_log_types = { workspace = true, optional = true }
re_sdk_types = { workspace = true, optional = true }
re_ui = { workspace = true, optional = true }
re_viewer_context = { workspace = true, optional = true }

egui = { workspace = true, optional = true }

[lints]
workspace = true
