[package]
name = "sp_simulation"
authors.workspace = true
description = "SimPlant Lab process simulation core: versionable FlowsheetSpec with degrees-of-freedom analysis, Scenario and SimulationRun aggregates."
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true, features = ["parse", "display", "serde"] }

[dev-dependencies]
