[package]
name = "log_benchmark"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
re_tracing = { path = "../../../crates/utils/re_tracing", features = ["server"] }
simplant-lab = { path = "../../../crates/top/simplant-lab" }

anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
emath.workspace = true
glam.workspace = true
rand.workspace = true
